pkg/lang/syntax/testdata/ub/invalid/duplicate-fields/factory/data-body.ub
factory: {
  data-sources: {
    current: std.file {
      path: '/tmp/one'
      path: '/tmp/two'
    }
  }
}
